[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/bandit.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Levels/Level.gd" type="Script" id=2]
[ext_resource path="res://Sounds/assets_Video-Game-Power-Level-Up-B1-www.fesliyanstudios.com (1).wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/assets_Door-Bell-Ding-A1-www.fesliyanstudios.com.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[node name="GrassLevel" type="CanvasLayer"]
script = ExtResource( 2 )
level_name = "Grass"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.721569, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -41.0
margin_right = 208.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "GRASS LEVEL"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = 50.0
margin_right = 138.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
text = "Change Scene"

[node name="ButtonClickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="LevelLoadedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
